@startuml exercice

class Duck {
    +quack(): void
    +swim(): void
}

class ElectronicDuck {
    -_on: boolean
    +quack(): void
    +swim(): void
    +turnOn(): void
    +turnOff(): void
}

class Pool {
    +run(): void
    -quack(Duck... ducks): void
    -swim(Duck... ducks): void
}

Duck --|> Pool
ElectronicDuck --|> Pool

@enduml
